<resources>

    <string name="anak1">bambang</string>
    <string name="anak2">adinda</string>
    <string name="anak3">rizki</string>


    <string name="app_name">Genpin for School</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="facebook_app_id">287281171956441</string>
    <string name="fb_login_protocol_scheme">fb287281171956441</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="pilih_sekolah_anda">Pilih Sekolah Anda</string>

    //////// daftar_public/daftar_parent
    <string name="et_nama_lengkap">Nama Lengkap</string>
    <string name="et_nik">NIK / NIORA</string>
    <string name="et_email">Alamat Email</string>
    <string name="et_number_handphone">Nomor Handphone</string>
    <string name="et_kata_sandi">Kata Sandi</string>
    <string name="et_ulangi_kata_sandi">Ulangi Kata Sandi</string>
    <string name="et_hubungan">Hubungan</string>
    <string name="btn_ayah">Ayah</string>
    <string name="btn_ibu">Ibu</string>
    <string name="btn_wali">Wali</string>
    <string name="rb_laki_laki">Laki - Laki</string>
    <string name="rb_perempuan">Perempuan</string>
    <string name="btn_buat_akun">Buat Akun</string>
    <string name="hub_ayah">Ayah</string>
    <string name="hub_ibu">Ibu</string>
    <string name="hub_wali">Wali</string>
    <string name="validate_fullname">* Mohon isi nama lengkap anda</string>
    <string name="validate_nik">* Masukan NIK / NIORA anda</string>
    <string name="validate_email">* Email tidak sesuai</string>
    <string name="validate_mobile_phone">* Masukan nomor handphone anda</string>
    <string name="validate_nomor_rumah">* Masukkan nomor rumah anda</string>
    <string name="validate_pass">* Masukan kata sandi anda</string>
    <string name="validate_pass_lengh">* Minimal 6 karakter</string>
    <string name="validate_number_lengh">* Minimal 10 karakter</string>
    <string name="validate_nik_lengh">* Harus dalam 16 karakter</string>
    <string name="validate_cpass">* Kata sandi sama, periksa kembali</string>
    <string name="validate_hubungan">* Mohon Pilih Hubungan Anda</string>
    <string name="validate_name_depan">* Mohon isi nama depan anda</string>
    <string name="validate_name_belakang">* Mohon isi nama belakang anda</string>
    <string name="validate_tempat_lahir">* Masukan tempat lahir anda</string>
    <string name="validate_negara">* Masukkan negara asal anda</string>
    <string name="validate_tanggal_lahir">* Masukan tanggal lahir anda</string>
    <string name="validate_kewarganegaraan">* Mohon pilih kewarganegaraan anda</string>
    <string name="validate_alamat_rumah">* Mohon masukkan alamat rumah anda</string>
    <string name="validate2_nik">Pastikan NIK / NIORA benar, agar dapat mengaskses anak anda. Bisa dengan Scan NIK dari KTP/KK</string>
    <string name="validate2_mobile_phone">Pasikan nomor ponsel anda aktif untuk keamanan dan kemudahan akses</string>
    <string name="validate2_pass_lengh">Minimal 6 karakter</string>
    <string name="tcb_ketentuan">Mohon, Disetujui terlebih dahulu</string>
    <string name="title_activity_menu_utama">MenuUtama</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="validate_alamat">* Masukkan alamat anda</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rb_pria">Pria</string>
    <string name="rb_wanita">Wanita</string>
    <string name="tv_latihan_teori">Latihan Teori</string>
    <string name="tv_ulangan_harian">Ulangan Harian</string>
    <string name="tv_latihan_praktikum">Latihan Praktikum</string>
    <string name="tv_ekstrakulikuler">Ekstrakulikuler</string>
    <string name="tv_ujian_sekolah">Ujian Sekolah</string>
    <string name="tv_ujian_negara">Ujian Negara</string>
    <string name="tv_nilai_akhir">Nilai Akhir</string>
    <string name="tv_rata_rata_kelas">Rata rata kelas</string>
    <string name="hint_cari_lokasi">Cari lokasi anda berada</string>

    <string name="TV_notifikasi">Notifikasi</string>
    <string name="TV_nada">Nada</string>
    <string name="Tv_pilih_nada_notifikasi">Pilih Nada Notifikasi</string>
    <string name="TV_getar">Getar</string>
    <string name="TV_about">About</string>
    <string name="TV_about_Tentang">We are a team of like-minded people, specialized in development of Android App Development creating new trends across the app space. Glad to Help in anyway!</string>
    <string name="Tv_versi">Versi</string>
    <string name="tv_term_condition"><![CDATA[Term & Condition]]></string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Pilih Nada Pemberitahuan</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="summary_choose_ringtone">Pilih Nada Pemberitahuan</string>
    <string name="summary_about">We are a team of like-minded people, specialized in development of Android App Development creating new trends across the app space. Glad to Help in anyway!</string>
    <string name="url_faq">http://www.kes.co.id/faq</string>
    <string name="url_term">http://www.kes.co.id</string>
    <string name="Tittle_term"><![CDATA[Term&condition]]></string>
    <string name="Tv_english">english</string>
    <string name="Key_SW_Language">Key_SW_Language</string>
    <string name="title_activity_setting_">Setting</string>
    <string name="write_file">This app needs access to your file storage so that it can write files.</string>
    <string name="btn_profil_anak">Profil Anak</string>
    <string name="btn_jadwal">Jadwal Pelajaran</string>
    <string name="btn_jadwal_ujian">Jadwal Ujian</string>
    <string name="btn_absensi_anak">Presensi</string>
    <string name="btn_tugas_anak">Tugas</string>
    <string name="btn_raport_anak">Rapor</string>
    <string-array name="kirim_kepada">
        <item>Kirim Kepada</item>
        <item>Orang Tua</item>
        <item>Siswa dan Orang Tua</item>
        <item>Kepala Sekolah</item>
        <item>Wakil Kepala Sekolah</item>
        <item>Admin</item>
    </string-array>
    ///////// Forgot Passsword
    <string name="tv_lupa_pass">Lupa Kata Sandi?</string>
    <string name="tv_info_pass">Kami memerlukan email anda yang terdaftar untuk mengirimikan instruksi pengaturan ulang kata sandi</string>
    <string name="btn_ubah_pass">Ubah Kata Sandi</string>

    ///////// Toast show
    <string name="error_resp_json">Internet bermasalah, coba lagi</string>
    <string name="error_resp_internet_con">Tidak ada koneksi internet, periksa dan hubungkan kembali</string>
    <string name="toast_cancel">Batalkan</string>
    <string name="bottom_dialog_lib_cancel">Batal</string>
    <string name="alamat_kantor">Blok H1 Selatan No.80,, Jl. Pluit Karang Utara, RT.21/RW.2, Pluit, Penjaringan, Kota Jkt Utara, Daerah Khusus Ibukota Jakarta 14450</string>
    <string name="no_kantor_1">+62216678519</string>
    <string name="no_kantor_2">+622122661372</string>
    <string name="no_handphone">+6285280298817</string>
    <string name="email_kantor">kes.developer@gmail.com</string>
    <string name="web_kantor">www.kes.co.id</string>
</resources>
