<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:ignore="UseCompoundDrawables,ContentDescription">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_tentang"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginBottom="25dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="10dp">

                <fragment
                    android:id="@+id/mapTentang"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="300dp" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tentang Kami"
                android:gravity="center"
                android:textColor="@color/ic_logo_background"
                android:textSize="18sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/ic_marker" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/alamat_tentang"
                    android:gravity="center_vertical"
                    android:typeface="monospace"
                    android:text="@string/alamat_kantor"
                    android:paddingStart="10dp"
                    android:textColor="@color/ic_logo_background"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                tools:ignore="ContentDescription,RtlSymmetry">
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/ic_call"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:paddingStart="10dp"
                        android:layout_weight="1"
                        android:text="@string/no_kantor_1"
                        android:typeface="monospace"
                        android:id="@+id/office1"
                        android:textColor="@color/ic_logo_background"
                        android:background="@drawable/edt_bg_selected_white"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/office2"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:paddingStart="10dp"
                        android:text="@string/no_kantor_2"
                        android:typeface="monospace"
                        android:textColor="@color/ic_logo_background"
                        />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/ic_smartphone"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/Mobile"
                    android:text="@string/no_handphone"
                    android:typeface="monospace"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:textColor="@color/ic_logo_background"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/ic_opened_email"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/Email"
                    android:gravity="center_vertical"
                    android:text="@string/email_kantor"
                    android:typeface="monospace"
                    android:paddingStart="10dp"
                    android:textColor="@color/ic_logo_background"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/ic_internet"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/web"
                    android:gravity="center_vertical"
                    android:text="@string/web_kantor"
                    android:typeface="monospace"
                    android:paddingStart="10dp"
                    android:textColor="@color/ic_logo_background"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>