<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="UselessParent,InefficientWeight,Autofill,ContentDescription">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_marginTop="100dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/ic_logo"
                    android:layout_width="100dp"
                    android:layout_height="100dp" />

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:textColor="@color/default_textHint"
                    android:text="@string/tv_lupa_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_marginBottom="30dp"
                    android:gravity="center"
                    android:textColor="@color/default_textHint"
                    android:text="@string/tv_info_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_email"
                    android:textColorHint="@color/default_textHint"
                    android:layout_width="match_parent"
                    android:theme="@style/LoginTextInputLayoutStyle"
                    android:layout_height="wrap_content"
                    style="@style/LoginTextInputLayoutStyle"
                    android:paddingStart="10dp">

                    <EditText
                        android:theme="@style/TextLabel"
                        android:id="@+id/et_email"
                        android:hint="Email"
                        android:textSize="16sp"
                        android:inputType="textEmailAddress"
                        android:background="@drawable/edt_bg_selector"
                        android:paddingBottom="6dp"
                        android:textColor="@color/default_textColor"
                        android:paddingTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:layout_marginTop="40dp"
                    android:id="@+id/btn_ubah_pass"
                    android:text="@string/btn_ubah_pass"
                    android:textSize="17sp"
                    android:textAllCaps="false"
                    android:background="@drawable/rectangle"
                    android:backgroundTint="@color/colorPrimary"
                    android:textColor="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="50dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>