<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".Student.Activity.EditProfile">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarprofil"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_nama_profile"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="40dp"
                android:textColorHint="@color/default_textHint"
                android:theme="@style/LoginTextInputLayoutStyle"
                style="@style/LoginTextInputLayoutStyle">

                <EditText
                    android:id="@+id/et_nama_profile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edt_bg_selector"
                    android:hint="@string/et_nama_lengkap"
                    android:gravity="center_vertical"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    android:textColor="@color/default_textColor"
                    android:textSize="16sp"
                    android:theme="@style/TextLabel" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_email_profile"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/default_textHint"
                android:theme="@style/LoginTextInputLayoutStyle"
                style="@style/LoginTextInputLayoutStyle">

                <EditText
                    android:id="@+id/et_email_profile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edt_bg_selector"
                    android:hint="Email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:singleLine="true"
                    android:textColor="@color/default_textColor"
                    android:textSize="16sp"
                    android:theme="@style/TextLabel" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_tanggal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/default_textHint"
                android:theme="@style/LoginTextInputLayoutStyle"
                style="@style/LoginTextInputLayoutStyle">

                <EditText
                    android:id="@+id/et_tanggal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edt_bg_selector"
                    android:hint="Tanggal Lahir"
                    android:imeOptions="actionNext"
                    android:inputType="date"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:singleLine="true"
                    android:textColor="@color/default_textColor"
                    android:textSize="16sp"
                    android:theme="@style/TextLabel" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_mobile_phone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/default_textHint"
                android:theme="@style/LoginTextInputLayoutStyle"
                style="@style/LoginTextInputLayoutStyle">

                <EditText
                    android:id="@+id/et_mobile_phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edt_bg_selector"
                    android:hint="Nomor Handphone"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:singleLine="true"
                    android:textColor="@color/default_textColor"
                    android:textSize="16dp"
                    android:theme="@style/TextLabel" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:textColor="@color/textColor_Grey"
                android:textSize="12dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:text="@string/validate2_mobile_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/default_textHint"
                android:theme="@style/LoginTextInputLayoutStyle"
                style="@style/LoginTextInputLayoutStyle">

                <EditText
                    android:id="@+id/et_alamat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edt_bg_selector"
                    android:hint="Alamat"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingStart="10dp"
                    android:singleLine="true"
                    android:textColor="@color/default_textColor"
                    android:textSize="16dp"
                    android:theme="@style/TextLabel" />
            </android.support.design.widget.TextInputLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:text="Jenis Kelamin" />

            <RadioGroup
                android:id="@+id/rg_hubungan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="40dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_pria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorPrimary"
                    android:text="@string/rb_pria"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/rb_wanita"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorPrimary"
                    android:text="@string/rb_wanita"
                    android:textColor="@color/black" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="40dp">

                <com.rey.material.widget.Spinner
                    android:id="@+id/sp_religion"
                    style="@style/Material.Widget.Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:spinnerMode="dropdown"
                    app:rd_style="@style/Material.Drawable.Ripple.Wave"
                    app:spn_arrowAnimClockwise="true"
                    app:spn_arrowAnimDuration="300"
                    app:spn_arrowColor="@color/colorPrimary"
                    app:spn_arrowSwitchMode="true"
                    app:spn_dividerColor="@color/black"
                    app:spn_dividerHeight="1dp"
                    app:spn_labelTextColor="@color/colorPrimary" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/rectangle"
                android:backgroundTint="@color/colorPrimary"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="Update Profile"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="15dp" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>